--- a/index.css
+++ b/index.css
@@ -163,6 +163,14 @@ margin-left: 10px;
     font-size: 15px;
     background-color: #FEC303;
     border: none;
+    cursor: pointer;
+}
+
+
+#first button:hover {
+    background-color: transparent;
+    border: 2px solid white;
+    color:  white;
 }
 #first ul {
     margin-right:  30px;
